--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#c41e21</color>
+    <color name="grey_input">#e1e2ec</color>
+    <color name="grey_background">#faf8ff</color>
 </resources>
