--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#c41e21</color>
     <color name="grey_input">#e1e2ec</color>
@@ -22,6 +16,16 @@
     <color name="institutionnel_color">#A0C4FF</color>
     <color name="technologique_color">#BDB2FF</color>
     <color name="international_color">#FFC6FF</color>
+
+
+
+    <color name="pastel_purple">#E0BDFB</color>
+    <color name="pastel_green">#99FEDE</color>
+    <color name="pastel_blue">#C0D0FB</color>
+    <color name="electric_blue">#2715C1</color>
+
+    <color name="black">#1D2031</color>
+
 
 
     <color name="fond">#D4E6FF</color>
